# routes/index.js
@@ -6,7 +6,7 @@ const router = express();
 const authRoutes = require('./authRoutes');
 const userRoutes = require('./userRoutes');
 const profileRoutes = require('./profileRoutes');
-// const postRoutes = require('./postRoutes');
+const postRoutes = require('./postRoutes');
 // const commentRoutes = require('./commentRoutes');
 // const matchRoutes = require('./matchRoutes');
 // const gameInvitationRoutes = require('./gameInvitationRoutes');
@@ -18,7 +18,7 @@ const profileRoutes = require('./profileRoutes');
 router.use('/auth', authRoutes);
 router.use('/users', userRoutes);
 router.use('/users', profileRoutes);
-// router.use('/posts', postRoutes);
+router.use('/posts', postRoutes);
 // router.use('/comments', commentRoutes);
 // router.use('/matches', matchRoutes);
 // router.use('/game-invitations', gameInvitationRoutes);
